--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -39,19 +39,44 @@
 
 .text {
   margin: 0 auto;
-  backdrop-filter: blur(3px);
+  backdrop-filter: blur(4px);
+  background-color: rgba(#000, 0.2);
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding-top: 2em;
+
+  & h1,
+  & h2, {
+    margin: 0;
+    padding: 0;
+    line-height: 1em;
+    white-space: nowrap;
+    font-size: calc(44px + 0.390625vw);
+  }
+}
+
+.hr {
+  height: 1px;
+  width: 100px;
+  background: #fff;
+  margin: 24px auto 10px;
+}
+
+.subtitle {
+  margin: 3em 0 0;
+  text-shadow: 0 2px 0 #000;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
 .glitch {
   color: white;
   position: relative;
   margin: 0;
-  font-size: calc(62px + 0.390625vw);
 
   &::before,
   &::after {
@@ -67,13 +92,14 @@
     left: 2px;
     text-shadow: -2px 0 #49FC00;
     clip: rect(24px, 550px, 90px, 0);
-    animation: glitch-anim-2 3.5s infinite linear alternate-reverse;
+    animation: glitch-anim-2 3.5s 4s linear alternate-reverse;
   }
+
   &::after {
     left: -2px;
     text-shadow: -2px 0 #b300fc;
     clip: rect(85px, 550px, 140px, 0);
-    animation: glitch-anim  3.5s infinite linear alternate-reverse;
+    animation: glitch-anim 3.5s 4s linear alternate-reverse;
   }
 }
 
@@ -154,6 +180,7 @@
     clip: rect(101px, 9999999px, 72px, 0);
   }
 }
+
 @-webkit-keyframes glitch-anim-2 {
   6.66666667% {
     clip: rect(76px, 9999999px, 132px, 0);
@@ -243,6 +270,7 @@
     clip: rect(5px, 9999999px, 14px, 0);
   }
 }
+
 @-o-keyframes glitch-anim-2 {
   6.66666667% {
     clip: rect(76px, 9999999px, 132px, 0);
@@ -332,6 +360,7 @@
     clip: rect(5px, 9999999px, 14px, 0);
   }
 }
+
 @-moz-keyframes glitch-anim-2 {
   6.66666667% {
     clip: rect(76px, 9999999px, 132px, 0);
@@ -421,6 +450,7 @@
     clip: rect(5px, 9999999px, 14px, 0);
   }
 }
+
 @keyframes glitch-anim-2 {
   6.66666667% {
     clip: rect(76px, 9999999px, 132px, 0);
