--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,6 +8,8 @@
 :global(html, body, #root) {
   background-color: var(--bg);
   width: 100%;
+  height: 100vh;
+  overflow: hidden;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial
 }
 
