--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -55,7 +55,15 @@
     padding: 0;
     line-height: 1em;
     white-space: nowrap;
-    font-size: calc(44px + 0.390625vw);
+
+  }
+
+  & h1 {
+    font-size: calc(24px + 0.390625vw);
+  }
+
+  & h2 {
+    font-size: calc(34px + 0.390625vw);
   }
 }
 
