--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -36,6 +36,23 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+
+  h1 {
+    margin: 0;
+    font-size: calc(24px + 1vw);
+  }
+
+  .stream {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    aspect-ratio: 16 / 9;
+  }
 }
 
 .text {
