--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -42,8 +42,9 @@
   flex-direction: column;
   gap: 1rem;
 
-  h1 {
+  h1, h2 {
     margin: 0;
+    color: #fff;
     font-size: calc(24px + 1vw);
   }
 
