--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -26,13 +26,15 @@
 }
 
 .pomegranate {
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 100%;
+  z-index: 100;
+  margin: 4rem auto;
+  //height: 100%;
   max-width: 100%;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  //left: 50%;
+  //top: 50%;
+  //transform: translate(-50%, -50%);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -40,7 +42,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 1rem;
+  //gap: 1rem;
 
   h1, h2 {
     margin: 0;
@@ -49,10 +51,10 @@
   }
 
   .stream {
-    width: 100%;
-    max-width: 800px;
-    height: auto;
-    aspect-ratio: 16 / 9;
+    //width: 100%;
+    //max-width: 800px;
+    //height: auto;
+    //aspect-ratio: 16 / 9;
   }
 }
 
