[update] Moychai ambient

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,13 +5,12 @@
 
 body {
   background: radial-gradient(circle,
-          #0b3b21,
-          #114c30,
-          #1b5e3d,
-          #265f4a,
-          #314c53,
-          #3a5465
-  );
+          #6b8e23,
+          #556b2f,
+          #2e8b57,
+          #4682b4,
+          #483d8b,
+          #2f4f4f);
 }
 .heroWrapper {
   min-height: 100vh;
