--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -22,13 +22,14 @@ body {
   text-align: center;
   flex-direction: column;
   gap: 1rem;
+  padding: 1rem;
 }
 
 .pomegranate {
   position: relative;
   width: 100%;
   z-index: 100;
-  margin: 2rem;
+  margin: 2rem 0;
   box-sizing: border-box;
   height: calc(100vh - 4rem);
   background-size: contain;
